configured jetty to serve our app ui hence separating ui from multiplication microservice